compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__basic.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 7
expression: "record_definition(\"PetCat\",\n&[(\"name\", type_::tuple(vec![])), (\"is_cute\", type_::tuple(vec![]))])"
snapshot_kind: text
---
-record(pet_cat, {name :: {}, is_cute :: {}}).
