compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__constant_record_update_with_unlabelled_fields.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 455
expression: "\npub type Wibble {\n  Wibble(Int, Float, b: Bool, s: String)\n}\n\npub const record = Wibble(1, 3.14, True, \"Hello\")\npub const updated = Wibble(..record, b: False)\n\npub fn main() {\n  updated\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble(Int, Float, b: Bool, s: String)
}

pub const record = Wibble(1, 3.14, True, "Hello")
pub const updated = Wibble(..record, b: False)

pub fn main() {
  updated
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([wibble/0]).

-type wibble() :: {wibble, integer(), float(), boolean(), binary()}.

-file("project/test/my/mod.gleam", 9).
-spec main() -> wibble().
main() ->
    {wibble, 1, 3.14, false, <<"Hello"/utf8>>}.
