compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__imported_qualified_constructor_as_fn_name_escape.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 359
expression: "import other_module\n\npub fn main() {\n  other_module.Let\n}"
snapshot_kind: text
---
----- SOURCE CODE
import other_module

pub fn main() {
  other_module.Let
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 3).
-spec main() -> fun((integer()) -> other_module:'let'()).
main() ->
    fun(Field@0) -> {'let', Field@0} end.
