compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__module_types.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 46
expression: "record_definition(\"PetCat\",\n&[(\"name\",\nArc::new(Type::Named\n{\n    publicity: Publicity::Public, package: \"package\".into(), module:\n    module_name, name: \"my_type\".into(), arguments: vec![], inferred_variant:\n    None,\n}))])"
snapshot_kind: text
---
-record(pet_cat, {name :: name:my_type()}).
