compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__record_accessor_multiple_variants.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 101
expression: "\npub type Person {\n    Teacher(name: String, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
    Teacher(name: String, title: String)
    Student(name: String, age: Int)
}
pub fn get_name(person: Person) { person.name }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([get_name/1]).
-export_type([person/0]).

-type person() :: {teacher, binary(), binary()} | {student, binary(), integer()}.

-file("project/test/my/mod.gleam", 6).
-spec get_name(person()) -> binary().
get_name(Person) ->
    erlang:element(2, Person).
